--- a/actual-combat/singel-page-demo/index.html
+++ b/actual-combat/singel-page-demo/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="app?_inline">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app"></div>
 </body>
-<script src="index"></script>
+<script src="app"></script>
+<script src="https://cdn.bootcss.com/vue/2.5.17-beta.0/vue.min.js"></script>
+<script src="./src/index.js?_inline"></script>
 </html>
