--- a/actual-combat/vue-demo/index.html
+++ b/actual-combat/vue-demo/index.html
@@ -9,6 +9,6 @@
 <body>
     <div id="app"></div>
 </body>
-<script src="https://cdn.bootcss.com/vue/2.5.17-beta.0/vue.min.js"></script>
+<script src="./dist/assets/lib/vue.min.js"></script>
 <script src="./dist/bundle.js"></script>
 </html>
