--- a/actual-combat/vue-demo/index.html
+++ b/actual-combat/vue-demo/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="./assets/lib/vue.min.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div id="app"></div>
 </body>
-<script src="./dist/assets/lib/vue.min.js"></script>
-<script src="./dist/bundle.js"></script>
 </html>
